# finite-state-machine

./: .gitignore  Makefile  Makefile.evtd  Makefile.fsm  README-fsm.md  README.md  button.script  cli.c  evtd.c  evtdemo.c  evtdemo.gdb  evtdemo.script  evtq.c  evtq.h  fsm.c  fsm.h  fsm_crosswalk.dia  fsm_defs.h  fsm_stoplight.dia  fsmdemo.c  fsmdemo.script  meson.build  play.script  timer.c  timer.h  utils.h  workers.h
rust_ai/: HLD.md  README.md  medium-article.md  medtest.md  prd.stoplight-crosswalk.md
rust_ai/stop_cross/: Cargo.toml
rust_ai/stop_cross/src/: main.rs
rust_ai_assisted/: HLD.md  README.md
rust_jules/: README.md
